# maleku-system

./: .dockerignore  .gitignore  .pre-commit-config.yaml  API.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  DOCKER-README.md  LICENSE  Makefile  README.md  SECURITY.md  backend_diagnose.sh  check_servers.sh  deploy.sh  dev.sh  docker-compose.infra.yml  docker-compose.staging.yml  docker-compose.test.yml  docker-compose.yml  playwright.config.ts  start-all.sh  start-dev.sh  start-marketing.sh  start-servers.sh  start.sh  start_backend.py  test-system.sh  test_backend.py
backend/: .env.example  DATABASE_IMPROVEMENTS.md  Dockerfile  Dockerfile.dev  alembic.ini  create_admin.py  docker-entrypoint.sh  mypy.ini  pyproject.toml  pytest.ini  railway.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_add_indexes_soft_deletes_and_jsonb.py  003_add_constraints_gin_indexes_and_jsonb.py  004_add_fulltext_search_room_availability.py  005_add_performance_indexes.py  006_idempotent_schema_sync.py  007_enrich_destinations.py  008_soft_delete.py  011_normalize_difficulty_values.py  012_normalize_tour_category.py  013_add_trigram_indexes.py  014_add_vendor_is_featured.py  015_add_vendor_tax_id.py  10208a737f40_fix_room_availability_notes_column_.py  5c57a60106d5_add_audit_logs_security_logs_role_.py  95526b2e75d5_add_content_models.py  c98a5b5e0fd5_add_property_fields_new_tables_and_enums.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: cache.py  config.py  (+8 more)
backend/tests/: conftest.py  factories.py  test_api.py  test_auth.py  test_availability_service.py  test_blog.py  test_bookings.py  test_bookings_integration.py  test_chat_security.py  test_content.py  test_core.py  test_destinations.py  test_models_smoke.py  test_pricing_service.py  test_properties.py  test_regression_fase1.py  test_reservation_flow.py  test_reservation_flow.sh  test_stripe.py  test_stripe_integration.py  test_upload_security.py  test_vendor_bola.py  test_vendors_integration.py
(+313 files in other folders)
