[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "costa-rica-travel-backend"
version = "1.0.0"
description = "Costa Rica Travel backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "sqlalchemy[asyncio]>=2.0.0,<3.0.0",
    "asyncpg>=0.30.0,<1.0.0",
    "alembic>=1.13.0,<2.0.0",
    "pydantic[email]>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "httpx>=0.28.0,<1.0.0",
    "python-multipart>=0.0.9,<1.0.0",
    "redis>=5.0.0,<6.0.0",
    "slowapi>=0.1.9,<1.0.0",
    "stripe>=8.0.0,<9.0.0",
    "pillow>=11.0.0,<12.0.0",
    "resend>=0.8.0,<1.0.0",
    "cloudinary>=1.40.0,<2.0.0",
    "sentry-sdk>=2.0.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0.0",
    "pytest-asyncio>=0.25.0,<1.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "pytest-httpx>=0.30.0,<1.0.0",
    "httpx>=0.28.0,<1.0.0",
    "aiosqlite>=0.20.0,<1.0.0",
    "ruff>=0.6.0,<1.0.0",
    "bandit>=1.7.0,<2.0.0",
    "respx>=0.21.0,<1.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short -m 'not slow'"
markers = [
    "security: Security regression tests (BOLA, XSS, auth)",
    "slow: Tests that take more than 1 second",
    "integration: Tests that need real DB / external services",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "SIM"]

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
fail_under = 0
show_missing = true
